--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,23 @@
 // Specific CSS for your home-page
+.restaurant-list {
+  list-style: none;
+  padding: 10px 0px;
+}
+
+.restaurant-list > li{
+  border: 1px solid rgb(200,200,200);
+  box-shadow: 2px 2px 2px rgb(150,150,150);
+  margin: 10px 0px;
+  padding: 8px 16px;
+  border-radius: 5px;
+}
+
+a {
+  color: rgb(100,100,100);
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(200,200,200);
+  text-decoration: none;
+}
