--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,34 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.review-list {
+  list-style: none;
+  padding-left: 5px;
+  border-left: 2px solid rgb(200,200,200)
+}
+
+.description-box {
+  box-shadow: 5px 5px 5px 5px rgb(200,200,200);
+  padding: 8px 16px;
+  border-radius: 5px;
+  background: rgb(230,230,230);
+}
+
+.review-container {
+  margin-top: 40px;
+}
+
+.review {
+  margin-bottom: 10px;
+  background: rgb(230,230,230);
+  padding: 8px 0px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.review > p{
+  margin: 0px;
+}
+
+
+
